NugetProjects/AndroidAppPreviewer/Nuget/AndroidAppPreviewer.PluginSDK.Package/build/native/include/AndroidAppPreviewer.PluginSDK/AndroidAppPreviewerPlugin.h

// All strings crossing this ABI are UTF-8 and copied into caller-owned buffers.
// All exported operations use the xp_* prefix; plugin-owned handles are opaque.
ANDROID_APP_PREVIEWER_PLUGIN_API uint32_t xp_get_abi_version(void);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_get_plugin_info(char* pluginInfoJson, int capacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_get_initial_page_id(void* session, char* pageId, int capacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_get_navigation_graph(void* session, char* graphJson, int capacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_navigate(void* session, const char* navigationRequestJson);
typedef struct xp_session xp_session;
typedef struct xp_session_inspection_result {
    int line;
    int column;
    char sourcePath[1024];
    xp_rect bounds;
} xp_session_inspection_result;
typedef struct xp_color {
    float red;
    float green;
    float blue;
    float alpha;
} xp_color;
ANDROID_APP_PREVIEWER_PLUGIN_API xp_session* xp_create_session(int width, int height);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_destroy_session(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_load_page(xp_session* session, const char* page);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_current_page(xp_session* session, char* page, int capacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_is_transitioning(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_navigate_preview_route(xp_session* session, const char* target);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_navigate_preview_route_path(xp_session* session, const char* path);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_preview_route_graph(xp_session* session, char* graph, int capacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_preview_page_title(xp_session* session, const char* page, char* title, int capacity);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_apply_preview_scenario(
    xp_session* session,
    const char* page,
    const char* json);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_export_preview_state(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_can_save_preview_state(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_reload_markup(xp_session* session, const char* page, const char* markup, const char* sourcePath);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_resize(xp_session* session, int width, int height);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_set_animation_playback_rate(xp_session* session, float value);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_pointer_down(xp_session* session, float x, float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_pointer_move(xp_session* session, float x, float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_pointer_up(xp_session* session, float x, float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_pointer_cancel(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_cursor_kind(xp_session* session, float x, float y);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_inspect(
    xp_session* session,
    float x,
    float y,
    xp_session_inspection_result* result);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_set_inspection_wireframe(
    xp_session* session,
    float thickness,
    int lineStyle,
    xp_color color,
    xp_color marginColor,
    xp_color paddingColor);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_set_selected_wireframe(
    xp_session* session,
    float thickness,
    int lineStyle,
    xp_color color,
    xp_color marginColor,
    xp_color paddingColor);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_clear_inspection_wireframe(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_clear_selected_inspection_element(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_select_inspection_element(
    xp_session* session,
    const char* sourcePath,
    int line,
    int column);
ANDROID_APP_PREVIEWER_PLUGIN_API int xp_session_pin_inspection_element(xp_session* session);
ANDROID_APP_PREVIEWER_PLUGIN_API void xp_configure_logging(const char* filePath);