NugetProjects/AndroidAppPreviewer/Nuget/AndroidAppPreviewer.PluginSDK.WPF/NativeRuntime.cs

using System.IO;
using System.Text;
using System.Runtime.InteropServices;
using System.Reflection;

namespace AndroidAppPreviewerPluginSDK {
    public enum NativeCommandType {
        BeginClip,
        EndClip,
        Outline,
        RoundedRect,
        RoundedRectOutline,
        Text,
        Image
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct NativeRect {
        public float X;
        public float Y;
        public float Width;
        public float Height;
    }

    [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Ansi)]
    public struct NativeInspectionResult {
        public int Line;
        public int Column;
        [MarshalAs(UnmanagedType.ByValTStr, SizeConst = 1024)]
        public string SourcePath;
        public NativeRect Bounds;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct NativeColor {
        public float Red;
        public float Green;
        public float Blue;
        public float Alpha;
    }

    [StructLayout(LayoutKind.Sequential)]
    public struct NativeInteractionResult {
        public int Kind;
        public int Direction;
        public IntPtr Target;
        public int ItemIndex;
    }

    [StructLayout(LayoutKind.Sequential)]
    public unsafe struct NativeCommand {
        public int Type;
        public NativeRect Bounds;
        public NativeColor Color;
        public float Value;
        public fixed byte Text[512];
        public fixed byte Auxiliary[128];

        public string GetText() {
            fixed (byte* value = this.Text) {
                return NativeCommand.ReadUtf8(value, 512);
            }
        }

        public string GetAuxiliary() {
            fixed (byte* value = this.Auxiliary) {
                return NativeCommand.ReadUtf8(value, 128);
            }
        }

        public float GetAuxiliaryFloat() {
            fixed (byte* value = this.Auxiliary) {
                return *(float*)value;
            }
        }

        private static string ReadUtf8(byte* value, int capacity) {
            var length = 0;
            while (length < capacity && value[length] != 0) {
                ++length;
            }

            return Encoding.UTF8.GetString(value, length);
        }
    }

    public static class NativeRuntime {
        private const string Library = "AndroidAppPreviewer.Plugin";
        private const uint PluginAbiVersion = 3;
        private static string? pluginPath;

        static NativeRuntime() {
            NativeLibrary.SetDllImportResolver(typeof(NativeRuntime).Assembly, NativeRuntime.ResolveLibrary);
        }

        public static void ConfigurePlugin(string? path) {
            if (string.IsNullOrWhiteSpace(path)) {
                return;
            }
            var fullPath = Path.GetFullPath(path);
            if (!File.Exists(fullPath)) {
                throw new FileNotFoundException("Не найдена DLL preview-plugin.", fullPath);
            }
            NativeRuntime.pluginPath = fullPath;
        }

        private static IntPtr ResolveLibrary(string name, Assembly assembly, DllImportSearchPath? searchPath) {
            if (!string.Equals(name, NativeRuntime.Library, StringComparison.OrdinalIgnoreCase)) {
                return IntPtr.Zero;
            }
            if (!string.IsNullOrEmpty(NativeRuntime.pluginPath)) {
                return NativeLibrary.Load(NativeRuntime.pluginPath);
            }
            return IntPtr.Zero;
        }

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_get_abi_version")]
        private static extern uint xp_get_abi_version();

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_get_navigation_graph")]
        public static extern int xp_get_navigation_graph(IntPtr session, [Out] StringBuilder graphJson, int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_get_plugin_info")]
        public static extern int xp_get_plugin_info([Out] StringBuilder pluginInfoJson, int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_get_initial_page_id")]
        public static extern int xp_get_initial_page_id(IntPtr session, [Out] StringBuilder pageId, int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_navigate")]
        public static extern int xp_navigate(IntPtr session, [MarshalAs(UnmanagedType.LPUTF8Str)] string transitionIds);

        public static void EnsurePluginCompatibility() {
            var actualVersion = NativeRuntime.xp_get_abi_version();
            if (actualVersion != NativeRuntime.PluginAbiVersion) {
                throw new InvalidOperationException($"Preview-plugin ABI {actualVersion} несовместим с ABI {NativeRuntime.PluginAbiVersion} Previewer-а.");
            }
        }

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_configure_logging")]
        public static extern void xp_configure_logging([MarshalAs(UnmanagedType.LPUTF8Str)] string filePath);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_create_session")]
        public static extern IntPtr xp_create_session(int width, int height);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_destroy_session")]
        public static extern void xp_destroy_session(IntPtr session);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_load_page")]
        public static extern int xp_session_load_page(IntPtr session, [MarshalAs(UnmanagedType.LPUTF8Str)] string page);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_current_page")]
        public static extern int xp_session_current_page(IntPtr session, [Out] StringBuilder page, int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_is_transitioning")]
        public static extern int xp_session_is_transitioning(IntPtr session);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_navigate_preview_route")]
        public static extern int xp_session_navigate_preview_route(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string target);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_navigate_preview_route_path")]
        public static extern int xp_session_navigate_preview_route_path(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_preview_route_graph")]
        public static extern int xp_session_preview_route_graph(IntPtr session, [Out] StringBuilder graph, int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_preview_page_title")]
        public static extern int xp_session_preview_page_title(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string page,
            [Out] byte[] title,
            int capacity);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_apply_preview_scenario")]
        public static extern int xp_session_apply_preview_scenario(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string page,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string json);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_export_preview_state")]
        public static extern int xp_session_export_preview_state(IntPtr session);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_can_save_preview_state")]
        public static extern int xp_session_can_save_preview_state(IntPtr session);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl)]
        public static extern int xp_session_reload_markup(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string page,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string markup,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string sourcePath);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_resize")]
        public static extern int xp_session_resize(IntPtr session, int width, int height);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_set_animation_playback_rate")]
        public static extern int xp_session_set_animation_playback_rate(IntPtr session, float value);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_pointer_down")]
        public static extern int xp_session_pointer_down(IntPtr session, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_pointer_move")]
        public static extern int xp_session_pointer_move(IntPtr session, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_pointer_up")]
        public static extern int xp_session_pointer_up(IntPtr session, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_pointer_cancel")]
        public static extern int xp_session_pointer_cancel(IntPtr session);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_cursor_kind")]
        public static extern int xp_session_cursor_kind(IntPtr session, float x, float y);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_inspect")]
        public static extern int xp_session_inspect(IntPtr session, float x, float y, out NativeInspectionResult result);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_set_inspection_wireframe")]
        public static extern int xp_session_set_inspection_wireframe(
            IntPtr session,
            float thickness,
            int lineStyle,
            NativeColor color,
            NativeColor marginColor,
            NativeColor paddingColor);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_set_selected_wireframe")]
        public static extern int xp_session_set_selected_wireframe(
            IntPtr session,
            float thickness,
            int lineStyle,
            NativeColor color,
            NativeColor marginColor,
            NativeColor paddingColor);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_clear_inspection_wireframe")]
        public static extern int xp_session_clear_inspection_wireframe(IntPtr session);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_clear_selected_inspection_element")]
        public static extern int xp_session_clear_selected_inspection_element(IntPtr session);

        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_select_inspection_element")]
        public static extern int xp_session_select_inspection_element(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPUTF8Str)] string sourcePath,
            int line,
            int column);
        [DllImport(Library, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xp_session_pin_inspection_element")]
        public static extern int xp_session_pin_inspection_element(IntPtr session);
